--- a/rc_front/src/shared/Header/Header.module.scss
+++ b/rc_front/src/shared/Header/Header.module.scss
@@ -27,6 +27,10 @@
     display: flex;
     align-items: center;
 
+    .swagger_button {
+      margin-right: 20px;
+    }
+
     .home_button {
       margin-right: 20px;
     }
